Arreglo de salto para otros suelos y plataformas
ADVERTENCIA: CADA VEZ QUE SE PONGA UNA PLATAFORMA O SUELO NUEVO DEBERA
MARCARSE EL TAG Y EL LAYER DE DICHA PLATAFORMA COMO SUELO EN LAS DOS
TANTO EN EL TAG COMO EL LAYER

--- a/TFG.v.5.5-master/TFG/TFG/TFG.CSharp.csproj
+++ b/TFG.v.5.5-master/TFG/TFG/TFG.CSharp.csproj
@@ -75,7 +75,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\scripts\ObjectAbsorb.cs" />
     <Compile Include="Assets\scripts\Poderes.cs" />
+    <Compile Include="Assets\scripts\Prueba.cs" />
     <Compile Include="Assets\scripts\camaraMOV.cs" />
     <Compile Include="Assets\scripts\personajeMOV.cs" />
   </ItemGroup>
