--- a/TFG.v.5.5-master/TFG/TFG/TFG.csproj
+++ b/TFG.v.5.5-master/TFG/TFG/TFG.csproj
@@ -77,9 +77,10 @@
   <ItemGroup>
     <Compile Include="Assets\scripts\ObjectAbsorb.cs" />
     <Compile Include="Assets\scripts\Poderes.cs" />
-    <Compile Include="Assets\scripts\Prueba.cs" />
     <Compile Include="Assets\scripts\camaraMOV.cs" />
+    <Compile Include="Assets\scripts\enemigo.cs" />
     <Compile Include="Assets\scripts\personajeMOV.cs" />
+    <Compile Include="Assets\scripts\triggerEnemi.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
