--- a/TFG.v.5.5-master/TFG/TFG/TFG.CSharp.csproj
+++ b/TFG.v.5.5-master/TFG/TFG/TFG.CSharp.csproj
@@ -52,9 +52,6 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -70,9 +67,6 @@
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
     </Reference>
@@ -83,9 +77,10 @@
   <ItemGroup>
     <Compile Include="Assets\scripts\ObjectAbsorb.cs" />
     <Compile Include="Assets\scripts\Poderes.cs" />
-    <Compile Include="Assets\scripts\Prueba.cs" />
     <Compile Include="Assets\scripts\camaraMOV.cs" />
+    <Compile Include="Assets\scripts\enemigo.cs" />
     <Compile Include="Assets\scripts\personajeMOV.cs" />
+    <Compile Include="Assets\scripts\triggerEnemi.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
