--- a/TFG/TFG.CSharp.csproj
+++ b/TFG/TFG.CSharp.csproj
@@ -52,9 +52,6 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -70,9 +67,6 @@
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
     </Reference>
@@ -81,6 +75,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\prefabs\Controller2D.cs" />
+    <Compile Include="Assets\prefabs\PlatformController.cs" />
+    <Compile Include="Assets\prefabs\Player.cs" />
+    <Compile Include="Assets\prefabs\PlayerInput.cs" />
+    <Compile Include="Assets\prefabs\RaycastController.cs" />
+    <Compile Include="Assets\scripts\BulletScript.cs" />
     <Compile Include="Assets\scripts\ObjectAbsorb.cs" />
     <Compile Include="Assets\scripts\Poderes.cs" />
     <Compile Include="Assets\scripts\camaraMOV.cs" />
