--- a/TFG/TFG.csproj
+++ b/TFG/TFG.csproj
@@ -96,17 +96,18 @@
     <Compile Include="Assets\ProCore\ProBuilder\API Examples\Procedural Mesh\ExtrudeRandomEdges.cs" />
     <Compile Include="Assets\ProCore\ProBuilder\API Examples\Runtime Editing\RuntimeEdit.cs" />
     <Compile Include="Assets\ProCore\ProBuilder\API Examples\Vertex Colors\HighlightNearestFace.cs" />
-    <Compile Include="Assets\prefabs\Controller2D.cs" />
-    <Compile Include="Assets\prefabs\PlatformController.cs" />
-    <Compile Include="Assets\prefabs\Player.cs" />
-    <Compile Include="Assets\prefabs\PlayerInput.cs" />
-    <Compile Include="Assets\prefabs\RaycastController.cs" />
     <Compile Include="Assets\scripts\BulletScript.cs" />
+    <Compile Include="Assets\scripts\Controller2D.cs" />
     <Compile Include="Assets\scripts\ObjectAbsorb.cs" />
+    <Compile Include="Assets\scripts\PlatformController.cs" />
+    <Compile Include="Assets\scripts\Player.cs" />
+    <Compile Include="Assets\scripts\PlayerInput.cs" />
     <Compile Include="Assets\scripts\Poderes.cs" />
+    <Compile Include="Assets\scripts\RaycastController.cs" />
     <Compile Include="Assets\scripts\camaraMOV.cs" />
     <Compile Include="Assets\scripts\enemigo.cs" />
     <Compile Include="Assets\scripts\personajeMOV.cs" />
+    <Compile Include="Assets\scripts\triggerCameraSize.cs" />
     <Compile Include="Assets\scripts\triggerEnemi.cs" />
   </ItemGroup>
   <ItemGroup>
