--- a/TFG/TFG.CSharp.csproj
+++ b/TFG/TFG.CSharp.csproj
@@ -52,9 +52,6 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -69,9 +66,6 @@
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
@@ -105,6 +99,7 @@
     <Compile Include="Assets\scripts\Absorb.cs" />
     <Compile Include="Assets\scripts\BulletScript.cs" />
     <Compile Include="Assets\scripts\Controller2D.cs" />
+    <Compile Include="Assets\scripts\MenuManagger.cs" />
     <Compile Include="Assets\scripts\ObjectAbsorb.cs" />
     <Compile Include="Assets\scripts\PlatformController.cs" />
     <Compile Include="Assets\scripts\Player.cs" />
@@ -113,7 +108,6 @@
     <Compile Include="Assets\scripts\RaycastController.cs" />
     <Compile Include="Assets\scripts\camaraMOV.cs" />
     <Compile Include="Assets\scripts\enemigo.cs" />
-    <Compile Include="Assets\scripts\personajeMOV.cs" />
     <Compile Include="Assets\scripts\triggerCameraSize.cs" />
     <Compile Include="Assets\scripts\triggerEnemi.cs" />
   </ItemGroup>
