--- a/TFG/TFG.CSharp.csproj
+++ b/TFG/TFG.CSharp.csproj
@@ -99,8 +99,10 @@
     <Compile Include="Assets\scripts\Absorb.cs" />
     <Compile Include="Assets\scripts\BulletScript.cs" />
     <Compile Include="Assets\scripts\Controller2D.cs" />
+    <Compile Include="Assets\scripts\FadeManagger.cs" />
     <Compile Include="Assets\scripts\MenuManagger.cs" />
     <Compile Include="Assets\scripts\ObjectAbsorb.cs" />
+    <Compile Include="Assets\scripts\PauseScript.cs" />
     <Compile Include="Assets\scripts\PlatformController.cs" />
     <Compile Include="Assets\scripts\Player.cs" />
     <Compile Include="Assets\scripts\PlayerInput.cs" />
@@ -108,6 +110,7 @@
     <Compile Include="Assets\scripts\RaycastController.cs" />
     <Compile Include="Assets\scripts\camaraMOV.cs" />
     <Compile Include="Assets\scripts\enemigo.cs" />
+    <Compile Include="Assets\scripts\lifeScript.cs" />
     <Compile Include="Assets\scripts\triggerCameraSize.cs" />
     <Compile Include="Assets\scripts\triggerEnemi.cs" />
   </ItemGroup>
