--- a/TFG/TFG.csproj
+++ b/TFG/TFG.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Assets\scripts\Enemigos\EnemigoRoll\enemigo.cs" />
     <Compile Include="Assets\scripts\Enemigos\EnemigoRoll\triggerEnemi.cs" />
     <Compile Include="Assets\scripts\HUD\FadeManagger.cs" />
+    <Compile Include="Assets\scripts\HUD\GameManager.cs" />
     <Compile Include="Assets\scripts\HUD\MenuManagger.cs" />
     <Compile Include="Assets\scripts\HUD\PauseScript.cs" />
     <Compile Include="Assets\scripts\Jugador\Absorb.cs" />
