--- a/TFG/TFG.csproj
+++ b/TFG/TFG.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Assets\2.0\CameraController.cs" />
     <Compile Include="Assets\2.0\CameraTarget.cs" />
     <Compile Include="Assets\2.0\CameraTrigger.cs" />
+    <Compile Include="Assets\2.0\CollisionController.cs" />
     <Compile Include="Assets\scripts\Animations\PlayerAnim.cs" />
     <Compile Include="Assets\scripts\Camera\camaraMOV.cs" />
     <Compile Include="Assets\scripts\Camera\TriggerCameraBlock.cs" />
