--- a/TFG/TFG.csproj
+++ b/TFG/TFG.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Assets\scripts\Props\ManaNPC.cs" />
     <Compile Include="Assets\scripts\Props\MovementPlatform.cs" />
     <Compile Include="Assets\scripts\StoreItems.cs" />
+    <Compile Include="Assets\scripts\Timer\TimerManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Ferr\2D\Scripts\poly2tri.cs\AUTHORS.txt" />
