--- a/TFG/TFG.csproj
+++ b/TFG/TFG.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Assets\scripts\Enemigos\EnemigoDisparo\EnemyShoot.cs" />
     <Compile Include="Assets\scripts\Enemigos\EnemigoRoll\enemigo.cs" />
     <Compile Include="Assets\scripts\Enemigos\EnemigoRoll\triggerEnemi.cs" />
+    <Compile Include="Assets\scripts\Enemigos\SmallEnemies\SmallEnemyOne.cs" />
     <Compile Include="Assets\scripts\HUD\FadeManagger.cs" />
     <Compile Include="Assets\scripts\HUD\GameManager.cs" />
     <Compile Include="Assets\scripts\HUD\MenuManagger.cs" />
