--- a/TFG/TFG.csproj
+++ b/TFG/TFG.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Assets\scripts\Enemigos\SmallEnemies\SmallEnemyOne.cs" />
     <Compile Include="Assets\scripts\Enemigos\SmallEnemy2\bulletSE2.cs" />
     <Compile Include="Assets\scripts\Enemigos\SmallEnemy2\SmallEnemy2.cs" />
+    <Compile Include="Assets\scripts\Enemigos\SmallEnemy3\EnemyThree.cs" />
     <Compile Include="Assets\scripts\HUD\FadeManagger.cs" />
     <Compile Include="Assets\scripts\HUD\GameManager.cs" />
     <Compile Include="Assets\scripts\HUD\MenuManagger.cs" />
